
10-Jan-2010 Ian MacLennan
 ! Recompressing system javascript

10-Jan-2011 Christophe Demko
 # [#24249] Cannot edit a weblink from the frontend (Andrew Eddie)
 # [#24233] Error parameters formated in tinymce (Nikolai Plath)
 # [#24258] Some article code can send JFilterInput into an endless loop (Ian MacLennan)
 + Adding Code contributors in CREDITS

10-Jan-2011 Jean-Marie Simonet
 $ Adding ca-ES, lo-LA to installation langs
 $ Adding af-ZA to installation langs
 $ Adding Translation Teams in CREDITS
 - Removed nl-BE from install lang packs because of wrong browser detect
 # [#24256] Language switcher broken by #24210. Thanks Sam
 # [#24267] debug plugin does not display results if gzip is on. Thanks Sam
 # [#24255] Fix background color in high contrast batch fieldsets. Thanks Andrea.
 # [#24162] Missing image in Beez2 and Beez5. Thanks Jenny.
 $ Adding zh-CN to installation langs

10-Jan-2011 Mark Dexter
# [#24250] PHP Notice In Archived Layout
# Sample data fixes (Elin Waring)
# [#24251] Article Category List Menu Item Missing Order By Parameters
# Sample data fixes: remove xx-XX language and add Joomla! library to joomla.sql
# [#24210] Revert to 1.5 behaviour for plugin language loading
# Remove milkyway template files and related rows from database tables
# [#24276] Fatal error: Cannot use object of type stdClass as array in ../libraries/joomla/updater/updater.php on line 108

10-Jan-2011 Andrew Eddie
 # Fix typo in Joomla system plugin.
 # Fixed issue [#24226] XSS Vulnerability in module chrome in administrator (Ian MacLennan).
 # Fixed issue [#24237] Database setup screen - radio button does not accomodate longer lang strings (Serge Litvinov, Andrea Tarr).
 # Fixed issue [#24221] JFormFieldRules creates invalid markup (Rouven Weßling, Andrea Tarr).
 # Fixed issue [#24215] Some small improvements to the installation (Rouven Weßling).
 # Fixed issue [#23992] Admin Bluestork template - Alignment of form text fields in IE7 (Ole Bang Ottosen, Bill Richardson).