@@ -1,0 +1,40 @@
+<?php
+/**
+ * @version		$Id$
+ * @package		Joomla.Installation
+ * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+defined('_JEXEC') or die;
+?>
+
+<div class="t">
+	<div class="t">
+		<div class="t"></div>
+	</div>
+</div>
+<div class="m">
+	<div class="far-right">
+<?php if ($this->document->direction == 'ltr') : ?>
+		<div class="button1-left"><div class="site"><a href="<?php echo JURI::root(); ?>" title="<?php echo JText::_('JSITE'); ?>"><?php echo JText::_('JSITE'); ?></a></div></div>
+		<div class="button1-left"><div class="admin"><a href="<?php echo JURI::root(); ?>administrator/" title="<?php echo JText::_('JADMINISTRATOR'); ?>"><?php echo JText::_('JADMINISTRATOR'); ?></a></div></div>
+<?php elseif ($this->document->direction == 'rtl') : ?>
+		<div class="button1-left"><div class="admin"><a href="<?php echo JURI::root(); ?>administrator/" title="<?php echo JText::_('JADMINISTRATOR'); ?>"><?php echo JText::_('JADMINISTRATOR'); ?></a></div></div>
+		<div class="button1-left"><div class="site"><a href="<?php echo JURI::root(); ?>" title="<?php echo JText::_('JSITE'); ?>"><?php echo JText::_('JSITE'); ?></a></div></div>
+<?php endif; ?>
+	</div>
+</div>
+<div class="b">
+	<div class="b">
+		<div class="b"></div>
+	</div>
+</div>
+<table class="final-table">
+	<tr>
+		<td class="error">
+			<?php echo JText::_('INSTL_COMPLETE_REMOVE_INSTALLATION'); ?>
+		</td>
+	</tr>
+</table>
+
