@@ -1,0 +1,21 @@
+<?php
+/**
+ * @version		$Id$
+ * @package		Joomla.Installation
+ * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+defined('_JEXEC') or die;
+
+jimport('joomla.application.component.view');
+
+/**
+ * The HTML Joomla Core Install Remove View
+ *
+ * @package		Joomla.Installation
+ * @since		1.6
+ */
+class JInstallationViewRemove extends JView
+{
+}
